# patient_management_system

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/app/: main.py
api/app/core/: config.py  db.py  errors.py  logging.py  security.py  storage.py  supabase_admin.py
api/app/schemas/: audit.py  billing.py  dashboard.py  encounters.py  guardians.py  masters.py  notifications.py  nursing.py  orders.py  patients.py  radiology.py  scheduling.py  users.py
api/tests/: conftest.py  test_admin_audit.py  test_admin_audit_integration.py  test_admin_rbac.py  test_admin_rbac_integration.py  test_admin_users.py  test_admin_users_integration.py  test_auth_integration.py  test_auth_jwks.py  test_billing_db.py  test_billing_integration.py  test_crypto_wrappers_integration.py  test_dashboard_integration.py  test_encounters_db.py  test_encounters_integration.py  test_errors.py  test_health.py  test_logging_pii.py  test_masters.py  test_masters_codes.py  test_masters_codes_integration.py  test_masters_integration.py  test_migrations_appointments.py  test_migrations_crypto.py  test_migrations_identity.py  test_migrations_masters.py  test_migrations_masters_codes.py  test_migrations_notifications.py  test_migrations_patients.py  test_migrations_scheduling.py  test_notifications.py  test_nursing_integration.py  test_order_encounter_gate_db.py  test_order_safety_unit.py  test_orders_db.py  test_orders_integration.py  test_patient_encounter_detail_integration.py  test_patient_encounters_integration.py  test_patient_payments_integration.py  test_patients_integration.py  (+15 more)
docs/: glossary.md  (+1 more)
(+495 files in other folders)
